fix(tabs): content overflow behavior cleanup
affects: @rei/cdr-tabs

--- a/src/components/tabs/styles/CdrTabs.pcss
+++ b/src/components/tabs/styles/CdrTabs.pcss
@@ -115,11 +115,10 @@
   }
 
   &__underline {
-    position: relative;
+    position: absolute;
     width: 30px;
     margin: 0;
-    margin-left: 5px;
-    margin-top: -1px;
+    margin-left: 41.5rem;
     height: $space-quarter-x;
     border: none;
     background: $easily-excited;
